# bufanda

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: captioner.rs  lib.rs  main.rs
src/api/: mod.rs
src/db/: mod.rs
src/engine/: mod.rs
src/processor/: image.rs  mod.rs  model.rs
static/: index.html
tests/: e2e.rs  integration_captioner.rs  integration_pipeline.rs  unit_image.rs  unit_model.rs
